--- a/_config.yml
+++ b/_config.yml
@@ -268,3 +268,11 @@ defaults:
       share: true
       related: true
       comments: true
+            
+sidebar:
+  - title: "Title"
+    image: http://placehold.it/350x250
+    image_alt: "image"
+    text: "Some text here."
+  - title: "Another Title"
+    text: "More text here."
