--- a/_config.yml
+++ b/_config.yml
@@ -267,7 +267,6 @@ defaults:
       author_profile: true
       share: true
       related: true
-      comments: true
-            
-sidebar:
-  - nav : "main"
+      comments: true         
+    sidebar:
+      nav : "main"
