--- a/_config.yml
+++ b/_config.yml
@@ -264,7 +264,7 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       share: true
       related: true
       comments: true         
