--- a/_config.yml
+++ b/_config.yml
@@ -264,9 +264,7 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: false
+      author_profile: true
       share: true
       related: true
       comments: true         
-    sidebar:
-      nav : "main"
