--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,46 +8,35 @@ main:
     url: /categories/
   - title: "Tags"
     url: /tags/
-sidebar-sample:
-  - title: "Parent Page A"
+    
+docs:
+  - title: Machine Learning
     children:
-      - title: "Child Page A1"
-        url: /child-page-a1/
-      - title: "Child Page A2"
-        url: /child-page-a2/
-      - title: "Child Page A3"
-        url: /child-page-a3/
-      - title: "Child Page A4"
-        url: /child-page-a4/
-  - title: "Parent Page B"
+      - title: "내 데이터로 CNN 돌려보기"
+        url: /_pages/cnn/
+      - title: "내 데이터로 ResNet 돌려보기"
+        url: /_pages/resnet/
+      - title: "AWS Sagemaker에서 ResNet 돌려보기"
+        url: /_pages/sagemaker/
+
+  - title: Algorithm
     children:
-      - title: "Child Page B1"
-        url: /child-page-b1/
-      - title: "Child Page B2"
-        url: /child-page-b2/
-      - title: "Child Page B3"
-        url: /child-page-b3/
-      - title: "Child Page B4"
-        url: /child-page-b4/
-      - title: "Child Page B5"
-        url: /child-page-b5/
-  - title: "Parent Page C"
+      - title: "Configuration"
+        url: /docs/configuration/
+
+  - title: Server
     children:
-      - title: "Child Page C1"
-        url: /child-page-c1/
-      - title: "Child Page C2"
-        url: /child-page-c2/
-      - title: "Child Page C3"
-        url: /child-page-c3/
-      - title: "Child Page C4"
-        url: /child-page-c4/
-      - title: "Child Page C5"
-        url: /child-page-c5/
-  - title: "Parent Page D"
+      - title: "Configuration"
+        url: /docs/configuration/
+
+  - title: iOS
     children:
-      - title: "Child Page D1"
-        url: /child-page-d1/
-      - title: "Child Page D2"
-        url: /child-page-d2/
-      - title: "Child Page D3 (External)"
-        url: https://your-domain.com
+      - title: "[Swift] 네비게이션 바, 화면 이동"
+        url: /_pages/swift1/
+      - title: "[Swift] 웹뷰(WKWebView), 옵셔널 바인딩(optional binding)"
+        url: /_pages/swift2/
+
+  - title: Python
+    children:
+      - title: "Configuration"
+        url: /docs/configuration/
