--- a/_config.yml
+++ b/_config.yml
@@ -268,3 +268,11 @@ defaults:
       share: true
       related: true
       comments: true         
+      sidebar:
+        nav : "docs"
+  - scope:
+      path: ""
+      type: docs
+    values:
+      sidebar:
+        nav: "docs"      
