--- a/_config.yml
+++ b/_config.yml
@@ -268,3 +268,10 @@ defaults:
       related: true
       comments: true
       toc: true
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+      toc: true
