--- a/_config.yml
+++ b/_config.yml
@@ -270,4 +270,19 @@ defaults:
       comments: true
       toc: true    
       sidebar:
-        nav: "docs"        
+        nav: "docs"
+        
+  - scope:
+      path: ""
+      type: categories
+    values:
+      sidebar:
+        nav: "docs"
+
+  - scope:
+      path: ""
+      type: tags
+    values:
+      sidebar:
+        nav: "docs"
+
