--- a/_config.yml
+++ b/_config.yml
@@ -257,6 +257,8 @@ compress_html:
   ignore:
     envs: development
 
+date_format: "%Y.%m.%d"
+
 defaults:
   # _posts
   - scope:
@@ -269,6 +271,7 @@ defaults:
       related: true
       comments: true
       toc: true
+      show_date: true
       sidebar:
         nav: "docs"
 
