--- a/_config.yml
+++ b/_config.yml
@@ -269,6 +269,8 @@ defaults:
       related: true
       comments: true
       toc: true
+      toc_sticky: true
+      toc_label: "Index"
       sidebar:
         nav: "docs"
   - scope:
